Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50491

QMainWindow::restoreDockWidget() doesn't restore correctly when GroupedDragging is set

    XMLWordPrintable

Details

    Description

      When saving the main window state and restoring it, the floating and grouped dock widgets are not restored correctly. The restored state is usually the state when you grouped the windows. If you move or resize the grouped window, it seems that the state is not stored.

      The attached modified Qt Dock Widgets Example demonstrates the problem. Float and group the dock widgets and move/resize them. Then restart the app.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              Unassigned Unassigned
              qtcomsupport Qt Support
              Votes:
              2 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:

                Gerrit Reviews

                  There are no open Gerrit changes