src/widgets/widgets/qdockarealayout_p.h
@@ -255,6 +255,7 @@ public:
     QLayoutItem *plug(const QList<int> &path);
     QLayoutItem *unplug(const QList<int> &path);
     void remove(const QList<int> &path);
+    void removePlaceHolder(const QString &name);
 
     void fitLayout();
 
